--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
